@@ -1,16 +1,27 @@
-use 5.006; #due to 'warnings' pragma
+#!/usr/bin/perl
+
+use strict;
+use warnings;
+use 5.006;
+
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
-    'NAME'          => 'CPAN::Testers::WWW::Reports::Query::Reports',
-    'VERSION_FROM'  => 'lib/CPAN/Testers/WWW/Reports/Query/Reports.pm',
-    'PREREQ_PM'     => {
-        WWW::Mechanize      => 0,
-        JSON::XS            => 0
-    },
+    AUTHOR              => 'Barbie <barbie@cpan.org>',
+    NAME                => 'CPAN::Testers::WWW::Reports::Query::Reports',
+    VERSION_FROM        => 'lib/CPAN/Testers/WWW/Reports/Query/Reports.pm',
+    ABSTRACT            => 'Retrieve CPAN Testers metadata direct from the CPAN Testers website',
+    NO_META             => 1,
 
-    'NO_META'       => 1,
+    PREREQ_PM           => {
 
-    'ABSTRACT'      => 'Retrieve CPAN Testers metadata direct from the CPAN Testers website.',
-    'AUTHOR'        => 'Barbie <barbie@cpan.org>'
+        # prereqs
+        'JSON::XS'          => '0',
+        'WWW::Mechanize'    => '0',
+
+        # build/test prereqs
+        'IO::File'          => '0',
+        'Test::More'        => '0.70'
+
+    }
 );
