@@ -5,6 +5,7 @@ Revision history for CPAN-Testers-WWW-Reports-Query-Reports
         - change file dates changed to meet W3CDTF standards.
         - upgraded to Test-CPAN-Meta-JSON
         - added LICENSE file.
+        - reworked Makefile.PL for clarity.
 
 0.06	2012-04-13
 	    - added skips in the event the site is down.
